--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -119,4 +119,4 @@ workflows:
       - publish-docs:
           context: aws
           requires:
-            - setup-environment
+            - approve-update
